--- a/app/templates/comparison/list.html
+++ b/app/templates/comparison/list.html
@@ -2,9 +2,9 @@
 
 		<% comparison.get("traits").forEach(function(trait){ %>
 		
-					<p class="franklinDemiIt fgBlue comparisonExpText">TOP 20 WORDS</p>
-					<hr class="bgBlue" style="height:3px"/>
-					<p class="franklinMed fgBlue comparisonExpSubtitle">The top twenty words of each candidate (excluding 'the', 'I', 'if', etc.)</p>
+					<p class="franklinDemiIt lime comparisonExpText">TOP 20 WORDS</p>
+					<hr class="bgLime" style="height:3px"/>
+					<p class="franklinMed lime comparisonExpSubtitle">The top twenty words of each candidate (excluding 'the', 'I', 'if', etc.)</p>
 
 					<div class="comparisonBarGraph push-1 span-2" style="height:300px; top: 250px;" >
 						<p class="franklinDemiCompIt barGraphText" > Obama </p>  </div>
