--- a/app/templates/comparison/count.html
+++ b/app/templates/comparison/count.html
@@ -8,9 +8,9 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 -->
-		<p class="franklinMedIt fgBlue comparisonExpText"> <%= comparison.get("title") %></p>
-		<hr class="bgBlue" style="height:3px"/>
-					<p class="franklinMed fgBlue comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
+		<p class="franklinMedIt lime comparisonExpText"> <%= comparison.get("title") %></p>
+		<hr class="bgLime" style="height:3px"/>
+		<p class="franklinMed lime comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
 
 		<% 	var val0 = comparison.get("wc")[0]; 
 				var val1 = comparison.get("wc")[1]; 
@@ -25,10 +25,10 @@
 				}
 				%>
 
-		<div class="comparisonBarGraph bgBlue push-1 span-2" style="height:<%= mapVal(val0)[0] %>px; top:<%= mapVal(val0)[1] %>px;" >
-			<p class="franklinDemiCompIt barGraphText" > Obama </p>  <p class="franklinDemiComp barGraphValue" > <%=  val0 %> </p> </div>
-		<div class="comparisonBarGraph bgBlue push-3 span-2" style="height:<%= mapVal(val1)[0] %>px; top:<%= mapVal(val1)[1] %>px;" >
-			<p class="franklinDemiCompIt barGraphText" > Romney </p>  <p class="franklinDemiComp barGraphValue" > <%=  val1 %>  </p> </div>
+		<div class="comparisonBarGraph bgLime push-1 span-2" style="height:<%= mapVal(val0)[0] %>px; top:<%= mapVal(val0)[1] %>px;" >
+			<p class="franklinDemiCompIt barGraphText grayBlue" > Obama </p>  <p class="franklinDemiComp barGraphValue grayBlue" > <%=  val0 %> </p> </div>
+		<div class="comparisonBarGraph bgLime push-3 span-2" style="height:<%= mapVal(val1)[0] %>px; top:<%= mapVal(val1)[1] %>px;" >
+			<p class="franklinDemiCompIt barGraphText grayBlue" > Romney </p>  <p class="franklinDemiComp barGraphValue grayBlue" > <%=  val1 %>  </p> </div>
 		
 		<% comparison.get("traits").forEach(function(trait){ %>
 		
