--- a/splash.css
+++ b/splash.css
@@ -246,9 +246,11 @@ sup {
   position: absolute;
   font-size: 700px;
   line-height: 550px;
-  font-family:"ff-meta-serif-web-pro"; font-weight:700; font-style:italic;
+  font-family: "ff-meta-serif-web-pro"; 
+  font-weight:800; 
+  font-style: italic;
   /* color: #8A8A8A; */
-  color: rgb(160,160,160);
+  color: rgb(140,140,140);
   opacity: 0.25;
   left: 0px;
   top:  0px;
