--- a/app/templates/overlays/numbers.html
+++ b/app/templates/overlays/numbers.html
@@ -2,6 +2,6 @@
 	<% if(speaker==1) { // Obama %>
     <div class="franklinMedIt numberPhrase" style="left: -1024px; top:<%= posY %>px;"><%= phrase.toUpperCase() %></div>
 	<% }else{ %>
-    <div class="franklinMedIt numberPhrase" style="right: -1024px; text-align: right; top:<%= posY %>px;"><%= phrase.toUpperCase() %></div> 
+    <div class="franklinMedIt numberPhrase" style="left: 2048px; text-align: left; top:<%= posY %>px;"><%= phrase.toUpperCase() %></div> 
 	<% } %>
 </div>
