--- a/app/templates/comparison/count.html
+++ b/app/templates/comparison/count.html
@@ -47,9 +47,9 @@
 				<% for (var i = 0; i < 3 ; i++) { %>
 				
 					<div class="comparisonLineContainer" style="top:<%= mapVal(values[i])[1] %>px"> 
-					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue" style="top:-50px" > <%=people[i] %></p>
+					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue"> <%=people[i] %></p>
 					<hr class="span-5 bgGrayBlue" /> 
-					<p class="franklinDemiComp comparisonPastValue" style="top:-15px" > <%=values[i]%> </p> 
+					<p class="franklinDemiComp comparisonPastValue"> <%=values[i]%> </p> 
 					</div>
 			
 				<% } %>
