--- a/app/templates/comparison/emotion.html
+++ b/app/templates/comparison/emotion.html
@@ -16,7 +16,7 @@
 				var val1 = comparison.get("traits")[0].vals[1]; 
 				var totalBarH = 450; 
 				var totalH = 600;
-				var range = [comparison.get("range")[0], comparison.get("range")[1]]
+				var range = [comparison.get("range")[0], comparison.get("range")[1]];
 				
 				function mapVal(val) {
 					var h = totalBarH*(100*val-range[0])/(range[1]-range[0]);
@@ -58,9 +58,9 @@
 				<% for (var i = 0; i < 4 ; i++) { %>
 				
 					<div class="comparisonLineContainer" style="top:<%= mapVal(values[i]/100.0)[1] %>px"> 
-					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue" style="top:-50px" > <%=people[i] %></p>
+					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue"> <%=people[i] %></p>
 					<hr class="span-5 bgGrayBlue"  /> 
-					<p class="franklinDemiComp comparisonPastValue" style="top:-15px" > <%=values[i]%> </p> 
+					<p class="franklinDemiComp comparisonPastValue" > <%=values[i]%> </p> 
 					</div>
 			
 				<% } %>
