--- a/app/templates/comparison/spectrum.html
+++ b/app/templates/comparison/spectrum.html
@@ -13,24 +13,34 @@
 		<div class = "span-3" style="height:450px; position:relative; border-right-style:dotted;"></div>
 
 		<!-- vals in here are incorrect. working on bug fix (dividing by 3 for now). JM -->
-		<% 	var val0 = comparison.get("traits")[0].vals[0]/3.0; 
+		<%  var val0 = comparison.get("traits")[0].vals[0]/3.0; 
 			var val1 = comparison.get("traits")[0].vals[1]/3.0; 
 			var totalBarH = 450; 
 			var totalH = 600;
-			var range = [comparison.get("range")[0], comparison.get("range")[1]]
-				
+			var range = [comparison.get("range")[0], comparison.get("range")[1]];
+  			var purple = [101, 45, 106];
+  			var redOrange = [255, 66, 55];
+			
 			function mapVal(val) {
 				var h = totalBarH*(100*val-range[0])/(range[1]-range[0]);
 				var t = totalH-h;
 				return [h,t];
 			}
+			function mapColor(val, channel) {
+				var val_n = (val - range[0])/(range[1] - range[0]);
+				var color = val_n*purple[channel] + (1.0-val_n)*redOrange[channel];
+				return color;
+			}
 			%>
 
 
-		<div class="spectrumPointer bgPurple push-1 span-2" style="top:<%= mapVal(val0)[1] - 50%>px;" >
-			<p class="franklinMedCompIt spectrumText" > Obama </p>  <p class="franklinMedComp spectrumValue" > <%=  Math.round(10000*val0)/100 %> </p> </div>
-		<div class="spectrumPointer bgRedOrange push-3 span-2" style="top:<%= mapVal(val1)[1] - 50%>px;" >
-			<p class="franklinMedCompIt spectrumText" > Romney </p>  <p class="franklinMedComp spectrumValue" > <%=  Math.round(10000*val1)/100 %>  </p> </div>
+		<div class="spectrumPointer bgPurple push-1 span-1" style="top:<%= mapVal(val0)[1] - 50%>px; background-color:rgb(<%=mapColor(val0,0)%>, <%=mapColor(val0,0)%>, <%=mapColor(val0,0)%>);" >
+		<hr class="spectrumDottedLine bgPurple span-2" />
+		<p class="franklinMedCompIt spectrumText" > Obama </p>  <p class="franklinMedComp spectrumValue" > <%=  Math.round(10000*val0)/100 %> </p> </div>
+	
+		<div class="spectrumPointer bgRedOrange push-4 span-1" style="top:<%= mapVal(val1)[1] - 50%>px;" >
+		<hr class="spectrumDottedLine spectrumDottedLineRight bgRedOrange span-2" />
+		<p class="franklinMedCompIt spectrumText" > Romney </p>  <p class="franklinMedComp spectrumValue" > <%=  Math.round(10000*val1)/100 %>  </p> </div>
 		
 		<% comparison.get("traits").forEach(function(trait){ 
 		
@@ -48,21 +58,22 @@
 			
 				for (var i = 0; i < 4 ; i++) { 
 					
-					var repub = "push-3";
+					var repub = "spectrumPush-3"; 
 					var dem = "push-2";
 					var xpos = "";
 					
-				    if (i%2 == 0)
-				       xpos = repub;
-			        else
-				       xpos = dem;
+				    if (i%2 == 0) {
+				       xpos = repub;  
 				       
+			        } else {
+				       xpos = dem;  
+				    }
 				    %>
 				
 					<div class="spectrumLineContainer <%=xpos%>" style="top:<%= mapVal(values[i]/100.0)[1] %>px"> 
-					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue" style="top:-50px" > <%=people[i] %></p>
+					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue" > <%=people[i] %></p>
 					<hr class="span-1 bgGrayBlue" /> 
-					<p class="franklinDemiComp comparisonPastValue" style="top:-15px" > <%=values[i]%> </p> 
+					<p class="franklinDemiComp comparisonPastValue" > <%=values[i]%> </p> 
 					</div>
 			
 				<% } %>
