--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -3,7 +3,7 @@
   <div id="navProgressMarker"></div>
 </div>
 <div id="navBar">
-<span class="franklinMedIt navTitle gray60" id="navTitle">ReConstitution</span>
+<span id="reconTitle" class="franklinMedIt navTitle gray60" id="navTitle">ReConstitution</span>
 <span class="franklinBook navSubTitle gray60" id="navDebateNum">1st Debate</span>
 <span class="franklinBook navSubTitle gray60">|</span>
 <span class="franklinBook navSubTitle gray60" id="navDate"><!--October 3, 2012--></span>
