landing page images added

--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -3,7 +3,7 @@
 	<span id="landingObama" class="franklinDemiComp gray60">OBAMA</span>
 	<span id="landingVersus" class="franklinDemiComp gray60">VS</span>
 	<span id="landingRomney" class="franklinDemiComp gray60">ROMNEY</span>
-	<span id="landingSubTitle" class="franklinDemiCompIt gray200">A LIVE DECONSTRUCTION OF THE US PRESIDENTIAL DEBATES</span>
+	<span id="landingSubTitle" class="franklinDemiCompIt gray160">A LIVE DECONSTRUCTION OF THE US PRESIDENTIAL DEBATES</span>
 	<div id="landingSubTitleDiv"></div>
 	<div id="landingButtonBox" class="push-4">
 		<% for (var i=0; i<3; i++){ %>
@@ -19,8 +19,10 @@
 	</div>
 	<div id="landingCreditsBox">
 		<span class="landingCredits push-0 white franklinBook">Partners</span>
+		<a href="http://www.sosolimited.com"> <img src="images/landingSosoLogo.png" class="push-0" style="position:absolute; top:48px;"/></a>
+		<a href="http://thecreatorsproject.com"> <img src="images/landingCreatorsLogo.png" class="push-1" style="position:absolute; top:48px;"/></a>
 		<span class="landingCredits push-3 white franklinBook">In collaboration with</span>
-		<span class="landingCredits push-3 white franklinMed" style="top:36px">Bocoup</br>Tim Branyen</span>
-		<span class="landingCredits push-4 white franklinMed" style="top:36px">James Pennebaker, UT Austin</br>Cindy Chung, UT Austin</span>
+		<span class="landingCredits push-3 white franklinMed" style="top:36px;">Bocoup</br>Tim Branyen</span>
+		<span class="landingCredits push-4 white franklinMed" style="top:36px;">James Pennebaker, UT Austin</br>Cindy Chung, UT Austin</span>
 	</div>
 </div>
