--- a/app/templates/comparison/spectrum.html
+++ b/app/templates/comparison/spectrum.html
@@ -27,20 +27,22 @@
 				return [h,t];
 			}
 			function mapColor(val, channel) {
-				var val_n = (val - range[0])/(range[1] - range[0]);
-				var color = val_n*purple[channel] + (1.0-val_n)*redOrange[channel];
-				
+				var val_n = (100.0*val - range[0])/(range[1] - range[0]);
+				var color = parseInt(val_n*purple[channel] + (1.0-val_n)*redOrange[channel]);
+				console.log(channel + ": "+ val_n +","+ color);
 				return color;
 			}
-			%>
+			var col0 = [mapColor(val0,0), mapColor(val0,1), mapColor(val0,2)];
+			var col1 = [mapColor(val1,0), mapColor(val1,1), mapColor(val1,2)];
+			
+		%>
 
-
-		<div class="spectrumPointer push-1 span-1" style="top:<%= mapVal(val0)[1] - 50%>px; background-color:rgb(<%=mapColor(val0,0)%>, <%=mapColor(val0,1)%>, <%=mapColor(val0,2)%>);" >
-		<hr class="spectrumDottedLine bgPurple span-2" />
+		<div class="spectrumPointer push-1 span-1" style="top:<%= mapVal(val0)[1] - 50%>px; background-color:rgb(<%=col0[0]%>, <%=col0[1]%>, <%=col0[2]%>);" >
+		<hr class="spectrumDottedLine span-2" style="background-color:rgb(<%=col0[0]%>, <%=col0[1]%>, <%=col0[2]%>);"/>
 		<p class="franklinMedCompIt spectrumText" > Obama </p>  <p class="franklinMedComp spectrumValue" > <%=  Math.round(10000*val0)/100 %> </p> </div>
 	
-		<div class="spectrumPointer bgRedOrange push-4 span-1" style="top:<%= mapVal(val1)[1] - 50%>px;" >
-		<hr class="spectrumDottedLine spectrumDottedLineRight bgRedOrange span-2" />
+		<div class="spectrumPointer push-4 span-1" style="top:<%= mapVal(val1)[1] - 50%>px; background-color:rgb(<%=col1[0]%>, <%=col1[1]%>, <%=col1[2]%>);" >
+		<hr class="spectrumDottedLine spectrumDottedLineRight span-2" style = "background-color:rgb(<%=col1[0]%>, <%=col1[1]%>, <%=col1[2]%>);"/>
 		<p class="franklinMedCompIt spectrumText" > Romney </p>  <p class="franklinMedComp spectrumValue" > <%=  Math.round(10000*val1)/100 %>  </p> </div>
 		
 		<% comparison.get("traits").forEach(function(trait){ 
