added more spectrum modes

--- a/app/templates/comparison/count.html
+++ b/app/templates/comparison/count.html
@@ -25,8 +25,8 @@
 				}
 		%>
 
-		<p class="franklinDemiComp push-0 countBigNumber grayBlue" style="top: <%= mapVal(val0)[1] - 128%>px;" > <%=  val0 %> </p>
-		<p class="franklinDemiComp push-4 countBigNumber grayBlue" style="top: <%= mapVal(val1)[1] - 128%>px;"> <%=  val1 %>  </p>
+		<p class="franklinDemiComp push-0 countBigNumber grayBlue" style="top: <%= mapVal(val0)[1]/2.0%>px;" > <%=  val0 %> </p>
+		<p class="franklinDemiComp push-4 countBigNumber grayBlue" style="top: <%= mapVal(val1)[1]/2.0%>px;"> <%=  val1 %>  </p>
 
 		<div class="comparisonBarGraph bgLime push-1 span-2" style="height:<%= mapVal(val0)[0] %>px; top:<%= mapVal(val0)[1] %>px;" >
 			<p class="franklinDemiCompIt barGraphText grayBlue" > Obama </p>   </div>
