--- a/app/templates/comparison/emotion.html
+++ b/app/templates/comparison/emotion.html
@@ -36,21 +36,32 @@
 			<% if (trait.name == "posemo") { %> 
 				
 				<% var people = ["Palin 2008", "Obama 2008", "Kerry 2004", "Nixon 1960"];
-				var values = [4.18, 3.58, 2.88, 1.94]; %>
+				var values = [4.18, 3.58, 2.88, 1.94]; 
+				var pos = ["comparisonPastCandidateRight", "comparisonPastCandidate", "comparisonPastCandidate", "comparisonPastCandidateRight"];
+				var pos2 = ["Right", "", "", "Right"];			
+				%>
 				
 			<% } else if (trait.name == "negemo") {%>
 			
-				<% var people = ["Bush 2000", "Reagan 1984", "McCain 2008","Bush 2004"];
-				var values = [1.02, 1.59, 2.39, 3.23]; %>
+				<% var people = ["Bush 2000", "Obama 2008", "McCain 2008","Bush 2004"];
+				var values = [1.02, 1.48, 2.39, 3.23]; 
+				var pos = ["comparisonPastCandidateRight", "comparisonPastCandidate", "comparisonPastCandidateRight", "comparisonPastCandidateRight"];
+				var pos2 = ["Right", "", "Right", "Right" ];
+				%>
 				
 			<% } else if (trait.name == "anger") {%>
 			
 				<% var people = ["Kennedy 1960", "Biden 2008", "Bush 1992", "Kerry 2004"];
-				var values = [0.32, 0.58, 0.97, 1.6]; %>
+				var values = [0.32, 0.58, 0.97, 1.6]; 
+				var pos = ["comparisonPastCandidate", "comparisonPastCandidate", "comparisonPastCandidateRight", "comparisonPastCandidate" ];
+				var pos2 = ["", "", "Right", "" ];				
+				%>
 			
 			<% } else if (trait.name == "funct") {%>
 			
 				<% var people = ["Kennedy 1960", "Biden 2008", "Bush 1992", "Kerry 2004"];
+				var pos = ["comparisonPastCandidate", "comparisonPastCandidate", "comparisonPastCandidateRight", "comparisonPastCandidate" ];
+				var pos2 = ["", "", "Right", "" ];						
 				var values = [20, 30, 40, 50]; %>
 			
 			<% } %>
@@ -58,8 +69,8 @@
 				<% for (var i = 0; i < 4 ; i++) { %>
 				
 					<div class="comparisonLineContainer" style="top:<%= mapVal(values[i]/100.0)[1] %>px"> 
-					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue"> <%=people[i] %></p>
-					<hr class="span-5 bgGrayBlue"  /> 
+					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue"> <%=people[i]%> </p>
+					<hr class="span-6 bgGrayBlue"  /> 
 					<p class="franklinDemiComp comparisonPastValue" > <%=values[i]%> </p> 
 					</div>
 			
