--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,4 +1,5 @@
 <div id="landingWrapper" class="container">
+	<span id="landingBigWords">government</br>education</br>opposition</br>election</span>
 	<span id="landingTitle" class="franklinDemiCompIt push-0">ReConstitution2012</span>
 	<span id="landingObama" class="franklinDemiComp gray60">OBAMA</span>
 	<span id="landingVersus" class="franklinDemiComp gray60">VS</span>
@@ -19,8 +20,8 @@
 	</div>
 	<div id="landingCreditsBox">
 		<span class="landingCredits push-0 white franklinBook">Partners</span>
-		<a href="http://www.sosolimited.com"> <img src="images/landingSosoLogo.png" class="push-0" style="position:absolute; top:48px;"/></a>
-		<a href="http://thecreatorsproject.com"> <img src="images/landingCreatorsLogo.png" class="push-1" style="position:absolute; top:48px;"/></a>
+		<a href="http://www.sosolimited.com" target="blank"> <img src="images/landingSosoLogo.png" class="push-0" style="position:absolute; top:48px;"/></a>
+		<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingCreatorsLogo.png" class="push-1" style="position:absolute; top:48px;"/></a>
 		<span class="landingCredits push-3 white franklinBook">In collaboration with</span>
 		<span class="landingCredits push-3 white franklinMed" style="top:36px;">Bocoup</br>Tim Branyen</span>
 		<span class="landingCredits push-4 white franklinMed" style="top:36px;">James Pennebaker, UT Austin</br>Cindy Chung, UT Austin</span>
