--- a/app/templates/comparison/spectrum.html
+++ b/app/templates/comparison/spectrum.html
@@ -13,8 +13,8 @@
 		<div class = "span-3" style="height:450px; position:relative; border-right-style:dotted;"></div>
 
 		<!-- vals in here are incorrect. working on bug fix (dividing by 3 for now). JM -->
-		<%  var val0 = comparison.get("traits")[0].vals[0]/3.0; 
-			var val1 = comparison.get("traits")[0].vals[1]/3.0; 
+		<%  var val0 = comparison.get("traits")[0].vals[0]; 
+			var val1 = comparison.get("traits")[0].vals[1]; 
 			var totalBarH = 450; 
 			var totalH = 600;
 			var range = [comparison.get("range")[0], comparison.get("range")[1]];
