--- a/splash.css
+++ b/splash.css
@@ -9,7 +9,8 @@ body {
   margin: 0px;
   padding: 0px;
   background-color: rgb(110,116,116);	
-  overflow: hidden;	
+  overflow-x: hidden;	
+  overflow-y: scroll;	
 }
 
 sup {
@@ -255,7 +256,7 @@ sup {
   left: 0px;
   top:  0px;
   width: 100%;
-  height: 2000px;
+  height: 1300px;
   overflow: hidden;
 }
 #underlay div {
