--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -453,7 +453,7 @@ hr {
 	/* background-color:yellow; */
 
 	-webkit-transition: -webkit-transform 1s ease-in;	
-	/* -webkit-transform: translateZ(0px);	*/
+	-webkit-transform: translateZ(0px);
 	
 }
 
@@ -474,7 +474,7 @@ hr {
 	line-height:100px;
 	left:-450px;	/* Start out of view */
 
-	/* -webkit-transform: translateZ(0px); */
+	-webkit-transform: translateZ(0px);
 }
 
 /* Word count overlays */
@@ -489,7 +489,7 @@ hr {
 	/* background-color:yellow; */
 
 	-webkit-transition: -webkit-transform 1s ease-in, left 1s, top 1s, height 1s, width 1s;	
-	/* -webkit-transform: translateZ(0px);	*/
+	-webkit-transform: translateZ(0px);
 
 }
 
@@ -539,7 +539,7 @@ hr {
 	padding: 0px 0px 0px 0px;
   color: rgb(255,157,108);
 	-webkit-transition: left 1s, right 1s, top 1s, height 1s, font-size 1s, line-height 1s;
-	/*-webkit-transform: translateZ(0px);	*/
+	-webkit-transform: translateZ(0px);	
   z-index: 3;
 
 }
@@ -554,7 +554,7 @@ hr {
 	padding: 0px 0px 0px 0px;
   color: rgb(124,51,64);
 	-webkit-transition: left 1s, right 1s, top 1s, height 1s, font-size 1s, line-height 1s;
-	/*-webkit-transform: translateZ(0px);	*/
+	-webkit-transform: translateZ(0px);	
   z-index: 3;
 }
 .quoteLeftQuote, .quoteRightQuote {
